--- a/TouristMe/pom.xml
+++ b/TouristMe/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.25</version>
 		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 
 	</dependencies>
