Connected all servlets together

--- a/TouristMe/src/main/webapp/WEB-INF/web.xml
+++ b/TouristMe/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,7 @@
 		<url-pattern>/UserServlet/edit</url-pattern>
 		<url-pattern>/UserServlet/update</url-pattern>
 		<url-pattern>/UserServlet/delete</url-pattern>
+		<url-pattern>/UserServlet/logout</url-pattern>
 	</servlet-mapping>
 	
 	<servlet>
