--- a/TouristMe/pom.xml
+++ b/TouristMe/pom.xml
@@ -16,6 +16,7 @@
  <scope>provided</scope>
  </dependency>
  <dependency>
+ 
  <groupId>javax.servlet.jsp</groupId>
  <artifactId>javax.servlet.jsp-api</artifactId>
  <version>2.3.1</version>
@@ -42,7 +43,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-      
+        
+      	<source>1.8</source>
+      	<target>1.8</target>
+      	
         </configuration>
       </plugin>
       <plugin>
