--- a/TouristMe/pom.xml
+++ b/TouristMe/pom.xml
@@ -35,7 +35,37 @@
  <version>1.2</version>
 </dependency>
 
+
+<dependency>
+<groupId>org.seleniumhq.selenium</groupId>
+<artifactId>selenium-java</artifactId>
+<version>2.53.1</version>
+</dependency>
+
+<dependency>
+<groupId>org.testng</groupId>
+<artifactId>testng</artifactId>
+<version>6.9.10</version>
+<scope>test</scope>
+</dependency>
+
+<dependency>
+<groupId>org.junit.jupiter</groupId>
+<artifactId>junit-jupiter</artifactId>
+<version>5.7.0</version>
+<scope>test</scope>
+</dependency>
+		
+<dependency>
+  <groupId>org.mockito</groupId>
+  <artifactId>mockito-junit-jupiter</artifactId>
+  <version>3.8.0</version>
+  <scope>test</scope>
+</dependency>
+
 </dependencies>
+  
+  
   
   <build>
     <plugins>
